[CHI-XXX] Bug with toggle switch inside a card - include word-wrap:normal property in toggle component

--- a/src/chi/components/card/card.scss
+++ b/src/chi/components/card/card.scss
@@ -11,6 +11,7 @@
     flex-direction: column;
     min-width: 0;
     position: relative;
+    word-wrap: break-word;
 
     &__hero {
       border-top-left-radius: $border-radius;
@@ -25,10 +26,6 @@
 
       .a-card__title {
         margin: 0 0 0.5rem 0;
-      }
-
-      & p {
-        word-wrap: break-word;
       }
     }
 
