--- a/src/chi/components/toggle-switch/toggle-switch.scss
+++ b/src/chi/components/toggle-switch/toggle-switch.scss
@@ -52,6 +52,7 @@
               top: 0;
               transform: scale(1);
               transition: left 0.2s ease-in 0.1s;
+              word-wrap: normal;
             }
           }
 
